# foodize

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DESIGN.json  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yaml  prometheus.yml
src/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 62da7dbc720a_add_display_id_to_restaurants.py  a1b2c3d4e5f6_backfill_display_id_for_restaurants.py  a7b8c9d0e1f2_add_restaurant_order_load_controls.py  b1a2c3d4e5f6_add_notification_model.py  b2c3d4e5f6a7_add_requested_pickup_at_to_orders.py  c3d4e5f6a7b8_add_order_idempotency_and_outbox.py  d4e5f6a7b8c9_add_cancellation_reason_to_orders.py  dea57a7958a8_initial_migration.py  e5f6a7b8c9d2_create_audit_logs.py  f6a7b8c9d0e1_add_promo_extensions.py
src/backend/api/: __init__.py  exception_handlers.py
src/backend/api/v1/: __init__.py
src/backend/database/: __init__.py  base.py  db_helper.py  metadata.py
src/backend/database/mixins/: __init__.py  created_at.py  deleted_at.py  id_int_pk.py  id_uuid_pk.py  name_str.py  updated_at.py
src/backend/features/: __init__.py
src/backend/features/admin/: api.py  crud.py  dependencies.py  exceptions.py  export.py  schemas.py  service.py
src/backend/features/ai_advisor/: api.py  crud.py  schemas.py  service.py  tools.py
src/backend/features/ai_order_agent/: api.py  crud.py  schemas.py  search.py  service.py  tools.py
src/backend/features/auth/: api.py  schemas.py  service.py
src/backend/features/cart/: api.py  schemas.py  service.py
src/backend/features/favorites/: api.py  crud.py  exceptions.py  models.py  schemas.py  service.py
src/backend/features/menu/: api.py  crud.py  exceptions.py  models.py  schemas.py  service.py
src/backend/features/notifications/: api.py  broker.py  consumer.py  crud.py  events.py  handlers.py  models.py  outbox.py  outbox_service.py  publisher.py  schemas.py  ws.py
src/backend/features/orders/: dependencies.py  exceptions.py  router.py
src/backend/features/promos/: api.py  crud.py  exceptions.py  models.py  schemas.py  service.py
src/backend/features/restaurants/: api.py  crud.py  dependencies.py  exceptions.py  models.py  schemas.py  service.py  working_hours.py  working_hours_crud.py  working_hours_schemas.py
src/backend/features/reviews/: api.py  crud.py  exceptions.py  models.py  schemas.py  service.py
src/backend/features/staff/: api.py  crud.py  dependencies.py  exceptions.py  schemas.py  service.py
src/backend/features/telegram/: api.py  crud.py  exceptions.py  schemas.py  service.py
src/backend/features/users/: api.py  crud.py  dependencies.py  exceptions.py  models.py  schemas.py
src/backend/features/vendors/: api.py  crud.py  dependencies.py  exceptions.py  export.py  models.py  schemas.py  service.py
src/backend/infra/cache/: base.py  redis.py
src/backend/infra/llm/: __init__.py  agent.py  anthropic_client.py  base.py  embeddings.py  factory.py  openai_compatible.py
src/backend/infra/messaging/: base.py  rabbitmq.py
src/backend/middlewares/: cache.py  request_id.py  security.py
src/backend/settings/config/: app_config.py  base.py
src/backend/shared/: permissions.py  response.py
src/backend/shared/dependencies/: __init__.py  (+1 more)
src/backend/tests/: conftest.py  factories.py
src/backend/utils/: JWT.py  __init__.py  case_converter.py  logging_setup.py
src/backend/worker/: main.py
src/telegram-bot/: .coverage  Dockerfile  config.py  main.py  pyproject.toml
src/telegram-bot/handlers/: start.py
src/telegram-bot/notifications/: consumer.py  handlers.py
src/telegram-bot/tests/: conftest.py  test_config.py  test_formatting.py  test_notifications.py  test_start.py
src/telegram-bot/utils/: enums.py  formatting.py
(+285 files in other folders)
