[project]
name = "foodize"
version = "0.1.0"
description = ""
authors = [
    { name = "Mikhail Khorokhorin", email = "mikhailkhorokhorin@gmail.com" },
    { name = "Timofey Pupykin", email = "pupykint@gmail.com" },
    { name = "Ivan Gerasimov", email = "ivan.gerasimou@yandex.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.121.1,<0.122.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.17.1,<2.0.0",
    "pydantic>=2.12.4,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "inflect>=7.5.0,<8.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "pytz>=2025.2,<2026.0",
    "pyjwt>=2.10.1,<3.0.0",
    "cryptography>=46.0.6",
    "redis>=7.4.0",
    "aio-pika>=9.5.5,<10.0.0",
    "slowapi>=0.1.9",
    "limits>=3.0.0",
    "structlog>=25.5.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "fpdf2>=2.8.0,<3.0.0",
    "anthropic>=0.49.0",
    "openai>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pre-commit>=4.4.0,<5.0.0",
    "ruff>=0.14.4,<0.15.0",
    "black>=25.9.0,<26.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "mypy>=1.18.2,<2.0.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.15.1",
    "factory-boy>=3.3.0,<4.0.0",
    "aiosqlite>=0.21.0,<0.22.0",
    "faker>=37.0.0,<38.0.0",
]

[tool.uv]

package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/**",
    "alembic/**",
    ".venv/**",
    "**/__pycache__/**",
    "**/features/admin/**",
    "**/features/telegram/**",
    "**/features/orders/api/ws.py",
    "**/features/notifications/**",
    "**/features/vendors/**",
    "**/features/reviews/**",
    "**/features/staff/**",
    "**/features/menu/service.py",
    "**/features/menu/api.py",
    "**/features/orders/crud/order.py",
    "**/features/promos/api.py",
    "**/features/restaurants/api.py",
    "**/features/favorites/api.py",
    "**/features/favorites/crud.py",
    "**/features/cart/api.py",
    "**/worker/**",
    "**/main.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100
lint.select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
