[project]
name = "foodize-bot"
version = "0.1.0"
description = "Foodize Telegram Bot"
authors = [
    { name = "Mikhail Khorokhorin", email = "mikhailkhorokhorin@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15.0,<4.0.0",
    "aio-pika>=9.5.5,<10.0.0",
    "redis>=7.4.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "*/__pycache__/*", "main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
